# rendoom

./: .gitignore  CMakeLists.txt  README.md
include/: color.h  config.h.in
src/: color.cpp  main.cpp
